# CLAE

./: .gitignore  README.md  analyze_steam.py  grid_search.py  preprocess_steam.py  pyproject.toml  run_grid_search.bat  run_grid_search.sh  summarize_results.py
experiments/: aspire_gamma_sweep.bat  aspire_gamma_sweep.sh  paradox_experiment.py  plot_sweep.py  run_paradox.sh  summarize_sweep.py
strong/code/: model.py  parse.py  register.py  world.py
weak/code/: model.py  parse.py  register.py  world.py
